@@ -30,6 +30,8 @@ Enable certain elm327 optimisations. This will [usually] make
 sampling faster [not a noticable amount if you're only sampling
 once a second], but makes it much easier to accidentally disobey
 the standard if you're sampling as fast as possible.
+.IP "-p|--capabilities"
+Dump the commands your OBD device claims to support to stdout, then exit.
 .IP "-d|--db <database>"
 Open this database to log data to. The software will create the
 database if it does not exist, and create the tables it needs.
