@@ -2,6 +2,7 @@ Version 0.5
  Move common obdinfo into its own library
  add to obdinfo so programs can know units, max, min, etc
  obdgpslogger: Convert values returned from obd to actual numbers
+ obdgpslogger: option to list supported PIDs in current OBD device
 
 Version 0.4 (released 2009-04-10)
  Add obdgui
